fix secondary menu vertical alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -166,6 +166,7 @@ body {
   list-style-type: none;
   margin: 0 12px;
   max-width: 176px;
+  vertical-align: top;
 }
 
 .secondary-menu li a {
